// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown inline should render text in a span 1`] = `
<span class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16">
  Hello world!
</span>
`;

exports[`Markdown should render a blockquote 1`] = `
<blockquote class="rsg--blockquote-24">
  <p class="rsg--para-2">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>
`;

exports[`Markdown should render a horizontal rule 1`] = `<hr class="rsg--hr-29">`;

exports[`Markdown should render a table 1`] = `
<table class="rsg--table-30">
  <thead class="rsg--thead-31">
    <tr>
      <th class="rsg--th-33 rsg--td-32">
        heading 1
      </th>
      <th class="rsg--th-33 rsg--td-32">
        heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="rsg--td-32">
        foo
      </td>
      <td class="rsg--td-32">
        bar
      </td>
    </tr>
    <tr>
      <td class="rsg--td-32">
        more foo
      </td>
      <td class="rsg--td-32">
        more bar
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Markdown should render check-lists 1`] = `
<ul class="rsg--list-21">
  <li class="rsg--li-23">
    <input type="checkbox"
           readonly
    >
    to do 1
  </li>
  <li class="rsg--li-23">
    <input type="checkbox"
           readonly
    >
    to do 2
  </li>
  <li class="rsg--li-23">
    <input type="checkbox"
           checked
           readonly
    >
    to do 3
  </li>
</ul>
`;

exports[`Markdown should render code blocks with highlighting 1`] = `
<div class="rsg--preContainer-25">
  <div class="rsg--container-26">
    <pre class="prism-code language-html rsg--highlightPre-27"
         style="color:#333;background-color:transparent"
    >
      <div class="token-line"
           style="color:#333"
      >
        <span class="token tag punctuation"
              style="color:#999"
        >
          &lt;
        </span>
        <span class="token tag"
              style="color:#905"
        >
          foo
        </span>
        <span class="token tag punctuation"
              style="color:#999"
        >
          &gt;
        </span>
        <span class="token tag punctuation"
              style="color:#999"
        >
          &lt;/
        </span>
        <span class="token tag"
              style="color:#905"
        >
          foo
        </span>
        <span class="token tag punctuation"
              style="color:#999"
        >
          &gt;
        </span>
      </div>
    </pre>
  </div>
</div>
`;

exports[`Markdown should render emphasis and strong text 1`] = `
<div>
  <p class="rsg--para-2">
    this text is
    <strong class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--strong-19">
      strong
    </strong>
  </p>
  <p class="rsg--para-2">
    and this is
    <em class="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--em-18">
      emphasized
    </em>
  </p>
</div>
`;

exports[`Markdown should render headings with generated ids 1`] = `
<div>
  <h1 id="one"
      class="rsg--heading-4 rsg--heading1-5 rsg--spacing-3"
  >
    one
  </h1>
  <h2 id="two"
      class="rsg--heading-4 rsg--heading2-6 rsg--spacing-3"
  >
    two
  </h2>
  <h3 id="three"
      class="rsg--heading-4 rsg--heading3-7 rsg--spacing-3"
  >
    three
  </h3>
  <h4 id="four"
      class="rsg--heading-4 rsg--heading4-8 rsg--spacing-3"
  >
    four
  </h4>
  <h5 id="five"
      class="rsg--heading-4 rsg--heading5-9 rsg--spacing-3"
  >
    five
  </h5>
  <h6 id="six"
      class="rsg--heading-4 rsg--heading6-10 rsg--spacing-3"
  >
    six
  </h6>
</div>
`;

exports[`Markdown should render inline code with escaping 1`] = `
<p class="rsg--para-2">
  Foo
  <code class="rsg--code-28">
    &lt;bar&gt;
  </code>
  baz
</p>
`;

exports[`Markdown should render links 1`] = `
<p class="rsg--para-2">
  a
  <a href="http://test.com"
     class="rsg--link-0"
  >
    link
  </a>
</p>
`;

exports[`Markdown should render mixed nested lists 1`] = `
<ul class="rsg--list-21">
  <li class="rsg--li-23">
    list 1
  </li>
  <li class="rsg--li-23">
    list 2
    <ol class="rsg--list-21 rsg--ordered-22">
      <li class="rsg--li-23">
        Sub-list
      </li>
      <li class="rsg--li-23">
        Sub-list
      </li>
      <li class="rsg--li-23">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-23">
    list 3
  </li>
</ul>
`;

exports[`Markdown should render ordered lists 1`] = `
<ol class="rsg--list-21 rsg--ordered-22">
  <li class="rsg--li-23">
    list
  </li>
  <li class="rsg--li-23">
    item
  </li>
  <li class="rsg--li-23">
    three
  </li>
</ol>
`;

exports[`Markdown should render paragraphs 1`] = `
<div>
  <p class="rsg--para-2">
    a paragraph
  </p>
  <p class="rsg--para-2">
    another paragraph
  </p>
</div>
`;

exports[`Markdown should render pre-formatted text 1`] = `
<div class="rsg--preContainer-25">
  <div class="rsg--container-26">
    <pre class="rsg--highlightPre-27">
      this is preformatted
so is this
    </pre>
  </div>
</div>
`;

exports[`Markdown should render unordered lists 1`] = `
<ul class="rsg--list-21">
  <li class="rsg--li-23">
    list
  </li>
  <li class="rsg--li-23">
    item
  </li>
  <li class="rsg--li-23">
    three
  </li>
</ul>
`;
